📱 fixed project view on smaller phones

--- a/src/assets/styles/_fonts.sass
+++ b/src/assets/styles/_fonts.sass
@@ -136,3 +136,10 @@ input, textarea
 
   h4
     line-height: 1.5
+
+@media screen and (max-width: medias.$mobile-screen-m)
+  #project-view > .content > .content-body > h2
+    font-size: $s-font
+
+  #about-view > .title-head > h1
+    font-size: $m-font
