--- a/src/assets/styles/_medias.sass
+++ b/src/assets/styles/_medias.sass
@@ -13,6 +13,7 @@ $tablet-screen-l: 830px
 // mobile screen
 $tablet-screen: 800px
 $mobile-screen-l: 425px
+$mobile-screen-m: 390px
 
 // HEIGHT
 $notebook-screen-height: 950px
